Update External Vault policy (#2357)
* Update External Vault policy

* Update policy

--- a/content/enterprise/requirements/data-storage/vault.mdx
+++ b/content/enterprise/requirements/data-storage/vault.mdx
@@ -39,43 +39,69 @@ Terraform Enterprise.
 1. Create the `tfe-policy.hcl` file with the following content:
 
   ```hcl
+  # To renew leases.
+  path "sys/leases/renew/*" {
+    capabilities = ["create", "read", "update"]
+  }
+  path "sys/renew/*" {
+    capabilities = ["create", "read", "update"]
+  }
+
+  # To renew tokens.
+  path "auth/token/renew/*" {
+    capabilities = ["create", "read", "update"]
+  }
+
+  # To perform a login.
   path "auth/approle/login" {
     capabilities = ["create", "read"]
   }
 
-  path "sys/renew/*" {
-    policy = "write"
+  # To upsert transit keys used for key generation.
+  path "transit/keys/atlas_*" {
+   capabilities = ["create", "read", "update"]
+  }
+  path "transit/keys/archivist_*" {
+    capabilities = ["create", "read", "update"]
   }
 
-  path "auth/token/renew/*" {
-    policy = "write"
-  }
-
+  # Encryption and decryption of data.
   path "transit/encrypt/atlas_*" {
     capabilities = ["create", "update"]
   }
-
   path "transit/decrypt/atlas_*" {
     capabilities = ["update"]
   }
-
   path "transit/encrypt/archivist_*" {
     capabilities = ["create", "update"]
   }
-
-  # For decrypting datakey ciphertexts.
   path "transit/decrypt/archivist_*" {
     capabilities = ["update"]
-  }
-
-  # To upsert the transit key used for datakey generation.
-  path "transit/keys/archivist_*" {
-    capabilities = ["create", "update"]
   }
 
   # For performing key derivation.
   path "transit/datakey/plaintext/archivist_*" {
     capabilities = ["update"]
+  }
+
+  # For backup/restore operations.
+  path "transit/keys/atlas_*/config" {
+    capabilities = ["read", "update"]
+  }
+  path "transit/backup/atlas_*" {
+    capabilities = ["read"]
+  }
+  path "transit/restore/atlas_*" {
+    capabilities = ["create", "read", "update"]
+  }
+  path "transit/keys/archivist_*/config" {
+    capabilities = ["read", "update"]
+  }
+  path "transit/backup/archivist_*" {
+    capabilities = ["read"]
+  }
+  path "transit/restore/archivist_*" {
+    capabilities = ["create", "read", "update"]
   }
 
   # For health checks to read the mount table.
