add the audit log issue to known issues for effected releases

--- a/content/enterprise/releases/2022/v202203-1.mdx
+++ b/content/enterprise/releases/2022/v202203-1.mdx
@@ -7,6 +7,7 @@ page_title: Releases - Terraform Enterprise
 ## Known Issues
 
 1. [April 21, 2022] This release includes an issue with the `tfe-bootstrap` container being unable to negotiate the Docker API version causing the installation and upgrade of Terraform Enterprise to fail with `Error response from daemon: client version 1.41 is too new. Maximum supported API version is 1.40` affecting docker `v19.03.x` or older. This issue is fixed in `v202204-2`.
+1. [May 10, 2022] This release includes an issue with Audit Log tagging, causing audit logs to no longer be tagged with the [Audit Log] prefix. This issue will be fixed in 'v202205-1'.
 
 ## UPCOMING DEPRECATION NOTICES:
 
